2018-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Check that the bits-per-sample is
	supported by the implementation before attempting to decode the
	image. Fixes oss-fuzz 8554 "graphicsmagick/coder_BIGTIFF_fuzzer:
	Undefined-shift in MagickBitStreamMSBWrite". (Credit to OSS-Fuzz)

	* coders/png.c (ReadMNGImage): Eliminate use of uninitialized
	header magic data by checking for EOF first.  Fixes oss-fuzz 8597
	"graphicsmagick/coder_MNG_fuzzer: Use-of-uninitialized-value in
	ReadMNGImage". (Credit to OSS-Fuzz)

2018-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: More fixes based on what is observed
	in oss-fuzz build log.

2018-05-24  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c The attribute should belong to only one scene and
	not to whole image list.

2018-05-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Changes to add CPPFLAGS to configure
	executions to hopefully get oss-fuzz build closer to success.

2018-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/t/jpeg/read.t: Add a JNX reader test case.

	* coders/jnx.c (ReadJNXImage): JNX image depth should be 8.

	* fuzzing/oss-fuzz-build.sh: Apply patch from Alex Gaynor to
	switch libpng to autotools build system, as well as configure
	GraphicsMagick with '--with-quantum-depth=16'.

2018-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Validate tile memory requests for
	the TIFFReadRGBATile() case in the same way as the TIFFReadTile()
	case.  Fixes oss-fuzz 8434 "graphicsmagick/coder_BIGTIFF_fuzzer:
	Out-of-memory in graphicsmagick_coder_BIGTIFF_fuzzer". (Credit to
	OSS-Fuzz)

2018-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tile.c (ReadTILEImage): Remove any existing size request
	when while image to tile.  This avoids size being used for both